# open-workload-scheduler

./: .gitignore  CMakeLists.txt  Makefile.Debug  Makefile.Release  README  README.md  client.pro  master.pro  open-workload-scheduler.pro
etc/: client.cfg  logging.properties  master.cfg  peers.pub  skeleton.sql  skeleton_sqlite.sql  test.sql
etc/mysql/: cleaning.sql  skeleton.sql
etc/sqlite/: skeleton.sql
include/: cfg.h  common.h  config.h  convertions.h  database.h  day.h  domain.h  job.h  node.h  router.h  rpc_client.h  rpc_server.h  shell.h
patches/: platform.patch
qmake_conf/: bsd.pro  linux.pro  macx.pro
src/: cfg.cpp  client.cpp  common.cpp  common.h  config.cpp  config.h  convertions.cpp  convertions.h  database.cpp  database.h  day.h  domain.cpp  domain.h  job.cpp  job.h  master.cpp  model.thrift  node.cpp  ows_config.cpp  router.cpp  router.h  rpc_client.cpp  rpc_client.h  rpc_server.cpp  rpc_server.h  shell.cpp  shell.h
src/thrift/: model_constants.cpp  model_constants.h  model_types.cpp  model_types.h  ows_rpc.cpp  ows_rpc.h  ows_rpc_client.cpp  ows_rpc_server.skeleton.cpp
